--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,6 @@ body{
   align-items: center;
   flex-direction: column;
   background: linear-gradient(90deg, 	#03396c, 	#6497b1);
-  background-position: cover;
-  background-repeat: no-repeat;
-  background-position: cover;
 }
 h1:nth-child(1){
   text-align: center;
@@ -24,8 +21,8 @@ h1:nth-child(2){
   font-size: 2rem ;
 }
 main{
+  margin: auto;
   margin-top: 7%;
-  margin-right: 0px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -34,10 +31,6 @@ main{
   width: 500px;
   padding: 10px;
   border-radius: 26px;
-}
-main input{
-  display: flex;
-  justify-content: space-between;
 }
 input{
   width: 50%;
@@ -57,6 +50,7 @@ button{
   border: none;
   font-size: 1.3rem;
   box-shadow: 1px 1px 5px black;
+  border-radius: 16px;
   color: 	#b3cde0;
 }
 input:-ms-input-placeholder{font-size: 1.4rem;}
@@ -79,13 +73,9 @@ footer p{
   margin: 0;
 }
 @media (max-width: 500px){
-  body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-  }
   main{
     width: 90%;
+    margin: auto;
+    margin-top: 7%;
   }
 }
